--- a/index.html
+++ b/index.html
@@ -395,6 +395,39 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="form" name="issue_report_form" autocomplete="off">
+          <div class="form-input">
+            <label class="form-label" width="360" height="58">
+              Name
+              <input class="form-contact" type="text" name="name" />
+            </label>
+            <label class="form-label">
+              Phone
+              <input class="form-contact" type="tel" name="phone" />
+            </label>
+            <label class="form-label">
+              Email
+              <input class="form-contact" type="email" name="email" />
+            </label>
+            <label class="form-label">
+              Comment
+              <input
+                class="form-contact-comment"
+                type="text"
+                name="comment"
+                placeholder="Text input"
+              />
+            </label>
+          </div>
+          <label class="form-contact-checkbox">
+            <input type="checkbox" name="checkbox" value="accept" />I accept the
+            terms and conditions of the Privacy Policy
+          </label>
+          <label class="form-contact-btn">
+            <button class="form-btn" type="submit" name="btn">Send</button>
+          </label>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
