--- a/index.html
+++ b/index.html
@@ -386,6 +386,22 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                name="email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <label class="footer-form-label">
+              <button class="footer-form-btn" type="submit">Subscribe</button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal class="backdrop is-hidden">
@@ -396,38 +412,40 @@
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form class="form" name="issue_report_form" autocomplete="off">
-          <div class="form-input">
-            <label class="form-label" width="360" height="58">
-              Name
-              <input class="form-contact" type="text" name="name" />
+        <div>
+          <form class="form" name="issue_report_form" autocomplete="off">
+            <div class="form-input">
+              <label class="form-label">
+                Name
+                <input class="form-contact" type="text" name="name" />
+              </label>
+              <label class="form-label">
+                Phone
+                <input class="form-contact" type="tel" name="phone" />
+              </label>
+              <label class="form-label">
+                Email
+                <input class="form-contact" type="email" name="email" />
+              </label>
+              <label class="form-label">
+                Comment
+                <input
+                  class="form-contact-comment"
+                  type="text"
+                  name="comment"
+                  placeholder="Text input"
+                />
+              </label>
+            </div>
+            <label class="form-contact-checkbox">
+              <input type="checkbox" name="checkbox" value="accept" />I accept
+              the terms and conditions of the Privacy Policy
             </label>
-            <label class="form-label">
-              Phone
-              <input class="form-contact" type="tel" name="phone" />
+            <label class="form-contact-btn">
+              <button class="form-btn" type="submit" name="btn">Send</button>
             </label>
-            <label class="form-label">
-              Email
-              <input class="form-contact" type="email" name="email" />
-            </label>
-            <label class="form-label">
-              Comment
-              <input
-                class="form-contact-comment"
-                type="text"
-                name="comment"
-                placeholder="Text input"
-              />
-            </label>
-          </div>
-          <label class="form-contact-checkbox">
-            <input type="checkbox" name="checkbox" value="accept" />I accept the
-            terms and conditions of the Privacy Policy
-          </label>
-          <label class="form-contact-btn">
-            <button class="form-btn" type="submit" name="btn">Send</button>
-          </label>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
