--- a/index.html
+++ b/index.html
@@ -398,7 +398,12 @@
               />
             </label>
             <label class="footer-form-label">
-              <button class="footer-form-btn" type="submit">Subscribe</button>
+              <button class="footer-form-btn" type="submit">
+                Subscribe
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame"></use>
+                </svg>
+              </button>
             </label>
           </form>
         </div>
