--- a/portfolio.html
+++ b/portfolio.html
@@ -310,6 +310,27 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                name="email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <label class="footer-form-label">
+              <button class="footer-form-btn" type="submit">
+                Subscribe
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
