--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               <input type="checkbox" name="checkbox" value="accept" />I accept
               the terms and conditions of the Privacy Policy
             </label>
-            <button class="form-btn" type="submit" name="btn">Send</button>
+            <button class="form-btn" type="submit">Send</button>
           </div>
         </form>
       </div>
