--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       <div class="modal">
         <button data-modal-close class="type" type="button">
           <svg class="modal-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
