--- a/index.html
+++ b/index.html
@@ -426,6 +426,9 @@
                   name="user-name"
                   type="text"
                 />
+                <svg class="form-icons" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
               </div>
             </label>
             <label class="form-label" for="user-name">
@@ -437,6 +440,9 @@
                   name="user-name"
                   type="text"
                 />
+                <svg class="form-icons" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
               </div>
             </label>
             <label class="form-label" for="user-name">
@@ -448,6 +454,9 @@
                   name="user-name"
                   type="text"
                 />
+                <svg class="form-icons" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
               </div>
             </label>
             <label class="form-label" for="user-name">
