--- a/index.html
+++ b/index.html
@@ -417,22 +417,20 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="form" name="issue_report_form" autocomplete="off">
           <div class="form-form">
-            <label class="form-label" for="user-name">
-              Name
-              <div class="form-input">
-                <input
-                  class="form-contact"
-                  id="user-name"
-                  name="user-name"
-                  type="text"
-                />
-                <svg class="form-icons" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
-            </label>
-            <label class="form-label" for="user-name">
-              Phone
+            <label class="form-label" for="user-name">Name</label>
+            <div class="form-input">
+              <input
+                class="form-contact"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="form-icons" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <div>
+              <label class="form-label" for="user-name">Phone</label>
               <div class="form-input">
                 <input
                   class="form-contact"
@@ -444,9 +442,9 @@
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
-            </label>
-            <label class="form-label" for="user-name">
-              Email
+            </div>
+            <div>
+              <label class="form-label" for="user-name">Email</label>
               <div class="form-input">
                 <input
                   class="form-contact"
@@ -458,9 +456,9 @@
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </div>
-            </label>
-            <label class="form-label" for="user-name">
-              Comment
+            </div>
+            <div>
+              <label class="form-label" for="user-name"> Comment</label>
               <div class="form-input">
                 <input
                   class="form-contact-comment"
@@ -470,12 +468,16 @@
                   placeholder="Text input"
                 />
               </div>
-            </label>
-            <label class="form-contact-checkbox">
-              <input type="checkbox" name="checkbox" value="accept" />I accept
-              the terms and conditions of the Privacy Policy
-            </label>
-            <button class="form-btn" type="submit">Send</button>
+            </div>
+            <div>
+              <label class="form-contact-checkbox">
+                <input type="checkbox" name="checkbox" value="accept" />I accept
+                the terms and conditions of the Privacy Policy
+              </label>
+            </div>
+            <div>
+              <button class="form-btn" type="submit">Send</button>
+            </div>
           </div>
         </form>
       </div>
