--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-            <div>
+            <div class="form-form">
               <label class="form-label" for="user-name">Phone</label>
               <div class="form-input">
                 <input
@@ -443,7 +443,7 @@
                 </svg>
               </div>
             </div>
-            <div>
+            <div class="form-form">
               <label class="form-label" for="user-name">Email</label>
               <div class="form-input">
                 <input
@@ -457,7 +457,7 @@
                 </svg>
               </div>
             </div>
-            <div>
+            <div class="form-form">
               <label class="form-label" for="user-name"> Comment</label>
               <div class="form-input">
                 <input
@@ -469,7 +469,7 @@
                 />
               </div>
             </div>
-            <div>
+            <div class="form-form">
               <label class="form-contact-checkbox">
                 <input type="checkbox" name="checkbox" value="accept" />I accept
                 the terms and conditions of the Privacy Policy
