--- a/index.html
+++ b/index.html
@@ -458,14 +458,14 @@
               </svg>
             </div>
           </div>
-          <div class="form-form">
-            <label class="form-label" for="user-name"> Comment</label>
+          <div class="form-form-comment">
+            <label class="form-label" for="user-comment">Comment</label>
             <div class="form-input">
-              <input
+              <textarea
                 class="form-contact-comment"
-                id="user-name"
+                id="user-comment"
                 type="text"
-                name="comment"
+                name="user-comment"
                 placeholder="Text input"
               />
             </div>
