--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  < class="body">
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -465,13 +465,17 @@
               id="user-comment"
               name="user-comment"
               placeholder="Text input"
-            />
+            ></textarea>
           </div>
-          <div class="form-form">
-            <label class="form-contact-checkbox">
-              <input type="checkbox" name="checkbox" value="accept" />I accept
-              the terms and conditions of the Privacy Policy
-            </label>
+          <div class="form-form-checkbox">
+              <input 
+              class="form-input-checkbox visually-hidden"
+              id="user-privacy" 
+              type="checkbox" 
+              value="true" 
+              name="user-privacy" />
+              <label class="form-contact-checkbox" for="user-privacy">I accept
+              the terms and conditions of the Privacy Policy</label>
           </div>
           <div>
             <button class="form-btn" type="submit">Send</button>
