--- a/index.html
+++ b/index.html
@@ -474,8 +474,10 @@
               type="checkbox" 
               value="true" 
               name="user-privacy" />
-              <label class="form-contact-checkbox" for="user-privacy">I accept
-              the terms and conditions of the Privacy Policy</label>
+              <label class="form-text-checkbox" for="user-privacy">
+                <span class="form-checkbox-icon"><svg width="10" height="8"><use></use></svg></span>
+                I accept
+              the terms and conditions of the <a href="#" class="form-text-link">Privacy Policy</a></label>
           </div>
           <div>
             <button class="form-btn" type="submit">Send</button>
