--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  < class="body">
+  <body class="body">
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -468,14 +468,23 @@
             ></textarea>
           </div>
           <div class="form-form-checkbox">
-              <input 
+            <input
               class="form-input-checkbox visually-hidden"
-              id="user-privacy" 
-              type="checkbox" 
-              value="true" 
-              name="user-privacy" />
-              <label class="form-text-checkbox" for="user-privacy">
-                <span class="form-checkbox-icon"><svg width="10" height="8"><use href="./images/icons.svg#icon-Vector"></use></svg></span>I accept the terms and conditions of the<a href="#" class="form-text-link">Privacy Policy</a></label>
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="form-text-checkbox" for="user-privacy">
+              <span class="form-checkbox-icon"
+                ><svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use></svg></span
+              >I accept the terms and conditions of the<a
+                href="#"
+                class="form-text-link"
+                >Privacy Policy</a
+              ></label
+            >
           </div>
           <button class="form-btn" type="submit">Send</button>
         </form>
