--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               <input
                 class="form-contact"
                 id="user-name"
-                name="user-name"
+                name="user-name1"
                 type="text"
               />
               <svg class="form-icons" width="18" height="24">
@@ -450,7 +450,7 @@
               <input
                 class="form-contact"
                 id="user-name"
-                name="user-name"
+                name="user-name2"
                 type="text"
               />
               <svg class="form-icons" width="18" height="24">
