--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               <input
                 class="form-contact"
                 id="user-name"
-                name="user-name1"
+                name="user-name"
                 type="text"
               />
               <svg class="form-icons" width="18" height="24">
@@ -445,12 +445,12 @@
             </div>
           </div>
           <div class="form-form">
-            <label class="form-label" for="user-name">Email</label>
+            <label class="form-label" for="user-name1">Email</label>
             <div class="form-input">
               <input
                 class="form-contact"
-                id="user-name"
-                name="user-name2"
+                id="user-name1"
+                name="user-name"
                 type="text"
               />
               <svg class="form-icons" width="18" height="24">
