--- a/index.html
+++ b/index.html
@@ -431,11 +431,11 @@
             </div>
           </div>
           <div class="form-form">
-            <label class="form-label" for="user-name">Phone</label>
+            <label class="form-label" for="user-name2">Phone</label>
             <div class="form-input">
               <input
                 class="form-contact"
-                id="user-name"
+                id="user-name2"
                 name="user-name"
                 type="text"
               />
