--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,16 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link link header-studio" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a
+                class="header-link link header-portfolio"
+                href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -77,7 +83,7 @@
           </ul>
           <ul class="port-list list">
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Banking.jpg"
@@ -99,7 +105,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Cashless.jpg"
@@ -120,7 +126,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Meditation.jpg"
@@ -141,7 +147,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Taxi.jpg"
@@ -162,7 +168,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Screen.jpg"
@@ -183,7 +189,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Online.jpg"
@@ -204,7 +210,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Instagram.jpg"
@@ -225,7 +231,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Organic.jpg"
@@ -246,7 +252,7 @@
               </a>
             </li>
             <li class="port-item">
-              <a class="link-link" href="#">
+              <a class="link-link link" href="#">
                 <div class="port-img">
                   <img
                     src="./images/Fresh.jpg"
