--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
               >
             </li>
             <li class="header-item">
-              <a
-                class="header-link link header-portfolio"
-                href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
