--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link header-studio" href="./index.html"
-                >Studio</a
-              >
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a
